--- a/pawww.html
+++ b/pawww.html
@@ -28,7 +28,7 @@
             
             function musicPlayChange() {
                 document.getElementById('Sound').play();
-                document.getElementById("Senpai").innerHTML="Arigatou Gozaimasu <br> (≧▽≦)";
+                document.getElementById("Senpai").innerHTML="Arigatou Gozaimasu!!! <br> (≧▽≦)";
                 document.removeEventListener('click', musicPlayChange);
             }
             
