--- a/pawww.html
+++ b/pawww.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title> I Wanna Be an Anime </title>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"?>
         <style>
             body{
                 color: #000000;
