--- a/pawww.html
+++ b/pawww.html
@@ -5,6 +5,11 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"?>
         <style>
+            #page{
+                 width: 96%;
+                  max-width: 1200px;
+                  margin: 0 auto;
+            }
             body{
                 color: #000000;
                 background-color: #F9F9F9;
