--- a/pawww.html
+++ b/pawww.html
@@ -1,33 +1,49 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title> I Wanna Be an Anime </title>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"?>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <style>
-            #page{
-                 width: 96%;
-                  max-width: 1200px;
-                  margin: 0 auto;
-            }
             body{
+                padding: 0;
+                margin: 0 auto;
                 color: #000000;
                 background-color: #F9F9F9;
-                height: 95vh;
-                width: relative;
+                height: 80%;
+                width: auto;
                 font-family: Monospace, Consolas, "Sans-Serif";
-                font-size: 22px;
+                font-size: 1.5vw;
                 align-content: center;
                 align-items: center;
                 text-align: center;
             }
+            sega{
+                font-family: Monospace, Consolas, "Sans-Serif";
+                font-size: 1.5vw;
+            }
+            @media only screen and (max-width: 1080px){
+                    body{
+                        padding: 0;
+                        margin: 0 auto;
+                        color: #000000;
+                        background-color: #F9F9F9;
+                        height: 80%;
+                        width: auto;
+                        font-family: Monospace, Consolas, "Sans-Serif";
+                        font-size: 2.5vw;
+                        align-content: center;
+                        align-items: center;
+                        text-align: center;
+                    }
+                    sega{
+                        font-family: Monospace, Consolas, "Sans-Serif";
+                        font-size: 2.5vw;
+                    }
+            }
             .nonegif{
                 display: block;
                 margin: 0 auto;
-            }
-            sega{
-                font-family: Monospace, Consolas, "Sans-Serif";
-                font-size: 20px;
+                
             }
         </style>
         <script>
@@ -63,8 +79,8 @@
     <body>
         <center>
         <div class="gifff">
-            <img class="nonegif" src="https://k.top4top.io/p_24366gyib0.gif" alt="Dancing Loli" height="700px" width="680px"/>
-        <hr style="border-top: dashed 9px;">
+            <img class="nonegif" src="https://k.top4top.io/p_24366gyib0.gif" alt="Dancing Loli" height="40%" width="auto"/>
+        <hr style="border-top: dashed 6px;">
         </div>
         <div class="main">
             <p>
@@ -85,7 +101,7 @@
             <h5>Thanks To:</h5>
             <h6> My Beloved God, My Team, My Friends, and You!</h6>
         </div>
-        <p style=" font-size=13"> Wanna Contact Me? <a href="mailto: nixvoid@proton.me">Click Here</a></p>
+        <p style=" font-size=12px"> Wanna Contact Me? <a href="mailto: nixvoid@proton.me">Click Here</a></p>
         </center>
     </body>
     <footer>
