--- a/pawww.html
+++ b/pawww.html
@@ -80,7 +80,7 @@
         <center>
         <div class="gifff">
             <img class="nonegif" src="https://k.top4top.io/p_24366gyib0.gif" alt="Dancing Loli" height="40%" width="auto"/>
-        <hr style="border-top: dashed 6px;">
+        <hr style="border-top: dashed 6px;color: #000000;">
         </div>
         <div class="main">
             <p>
