--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 Click On Me Senpai <br> (≧◡≦)
             </sega>
             <br/>
-            <h4>Pawned by lonewolf-303</h4>
+            <h4>Pawned by arxnoire</h4>
             <h5>Thanks To:</h5>
             <h6> My Beloved God, My Team, My Friends, and You!</h6>
         </div>
