--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="audiogroup">
                     <!--<iframe src="https://b.top4top.io/m_2437wyvy90.mp3" allow="autoplay" id="audio" style="display: none"></iframe>-->
                     <audio id="Sound" autoplay loop preload="auto">
-                        <source src="https://e.top4top.io/m_2624m2ika1.mp3" type="audio/mp3">
+                        <source src="https://i.top4top.io/m_2824y3nge1.mp3" type="audio/mp3">
                     </audio>
                 </div>
             <sega id="Senpai">
