--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="audiogroup">
                     <!--<iframe src="https://b.top4top.io/m_2437wyvy90.mp3" allow="autoplay" id="audio" style="display: none"></iframe>-->
                     <audio id="Sound" autoplay loop preload="auto">
-                        <source src="https://soundcloud.com/user-847628904/amanojaku?si=b00be6e224044a519762169fccf7417e&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mp3">
+                        <source src="https://github.com/arxnoire/wolfyx.root.sx/blob/main/OmaeWaMouShindeiru.mp3">
                     </audio>
                 </div>
             <sega id="Senpai">
