add cute emoticon

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h6> My Beloved God, My Team, My Friends, and You!</h6>
         </div>
         <p style=" font-size=12"> Wanna Contact Me? <a href="mailto: nixvoid@proton.me">Click Here</a></p>
-	<p style=" font-size=12"><a href=https://github.com/arxnoire>My Github</a></p>
+	<p style=" font-size=12"><a href=https://github.com/arxnoire>My Github (≧▽≦)</a></p>
         </center>
     </body>
     <footer>
