--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </sega>
             <br/>
             <h4>Pawned by arxnoire</h4>
+	    <h3>created by Azrul</h3>
             <h5>Thanks To:</h5>
             <h6> My Beloved God, My Team, My Friends, and You!</h6>
         </div>
